// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with expenses 1`] = `
<div>
  <p>
    Viewing 
     
    expenses
     totalling 
    $234.23
  </p>
</div>
`;

exports[`should render ExpensesSummary with no expenses 1`] = `
<div>
  <p>
    Viewing 
     
    expenses
     totalling 
    $0.00
  </p>
</div>
`;
